# atech_interview

./: CMakeLists.txt  README.md
include/: max_area.h
src/: main.c  max_area.c
tests/: test_max_area.c
